完善程序逻辑

--- a/src/main/resources/templates/api.html
+++ b/src/main/resources/templates/api.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" lang="zh-Hans">
 <head>
 <meta charset="UTF-8">
 <title>一言数据</title>
