--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="zh-Hans">
 <head>
     <title>WebSocket简单聊天室</title>
     <meta charset="utf-8" name="viewport" content="width=device-width">
